@@ -2,6 +2,8 @@ ikiwiki (3.20121018) UNRELEASED; urgency=low
 
   * filecheck: Fix bug that prevented File::MimeInfo::Magic from ever
     being used.
+  * openid: Display openid in Preferences page as a comment, so it can be
+    selected in all browsers.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 04 Nov 2012 11:59:10 -0400
 
